# genovisio_isv

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  conda_example.yml  conda_isv.yml  pyproject.toml
.github/workflows/: main.yml
isv/: main.py  predict.py
isv/models/: gain.json  isv2_gain.json  isv2_loss.json  loss.json  scaler_gain.joblib  scaler_loss.joblib  shap_gain.pkl  shap_loss.pkl  shap_tree_explainer_gain.joblib  shap_tree_explainer_loss.joblib
isv/src/: constants.py  core.py  features.py  isv_attributes.py  prediction.py
tests/: test_predict.py
