[tool.poetry]
name = "isv"
version = "0.3.0"
description = "CNV annotation and pathogenicity prediction tool"
authors = ["Michaela Gaziova <michaela.gaziova@geneton.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.2"
numpy = "==1.26.4"
joblib = ">=1.4"
xgboost = "==2.1.0"
shap = "==0.45.1"
annotation = {git = "https://github.com/geneton-ltd/genovisio_annotation.git", tag= "v0.2.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pre-commit = ">=4.0.1"

[tool.poetry.scripts]
isv-predict = "isv.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
