[tool.poetry]
name = "isv"
version = "0.4.0"
description = "CNV annotation and pathogenicity prediction tool"
authors = ["Michaela Gaziova <michaela.gaziova@geneton.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
cloudpickle = "3.1.1"
joblib = "1.5.2"
llvmlite = "0.44.0"
numba = "0.61.2"
numpy = "2.2.6"
nvidia-nccl-cu12 = "2.27.7"
packaging = "25.0"
pandas = "2.3.2"
pandas-stubs = "2.3.2.250827"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
ruff = "0.12.11"
scikit-learn = "1.7.1"
scipy = "1.16.1"
shap = "0.48.0"
six = "1.17.0"
slicer = "0.0.8"
threadpoolctl = "3.6.0"
tqdm = "4.67.1"
types-pytz = "2025.2.0.20250809"
typing_extensions = "4.15.0"
tzdata = "2025.2"
xgboost = "3.0.4"
annotation = {git = "https://github.com/geneton-ltd/genovisio_annotation.git", tag= "v0.3.1"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pre-commit = ">=4.0.1"

[tool.poetry.scripts]
isv-predict = "isv.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
